# api_flask

./: .gitignore  Dockerfile  pyproject.toml  web.py
dao/: base_dao.py  category_dao.py  session.py
models/: category_model.py  model_base.py
resourcers/: resource_name.py
resources/: base_resource.py  category_resource.py
templates/: index.html
