[tool.poetry]
name = "novo_projeto"
version = "0.1.0"
description = ""
authors = ["Marcello Santana <marcellosantana@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
